hard-gists/5ce8bb1f4c55d17b5b25/run.log
=== Docker Run Log for 5ce8bb1f4c55d17b5b25 ===
Started at: Mi 29. Okt 16:15:19 CET 2025

[2025-10-29 16:15:20] START: Running container for 5ce8bb1f4c55d17b5b25
[2025-10-29 16:15:20] SUCCESS: Container 0f393bd02eef0a1f8beb255b61a5a518d11f577cac246aa068c85bc3bcf12e84 started for 5ce8bb1f4c55d17b5b25
=== Container logs for 5ce8bb1f4c55d17b5b25 ===
  File "/snippet.py", line 10
    print new_s.pk
    ^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5ce8bb1f4c55d17b5b25 ===
[2025-10-29 16:15:22] INFO: Container 0f393bd02eef0a1f8beb255b61a5a518d11f577cac246aa068c85bc3bcf12e84 has stopped
